Change lyrics position to center

--- a/index.html
+++ b/index.html
@@ -22,98 +22,100 @@
     >
 </head>
 <body>
-    <div class="lyrics">
-        <h1>Cider Road</h1>
-        <h3>by The Dreadnoughts</h3>
-    
-        <p>Let's go</p>
-        <p>
-            Top down, straight in<br>
-            That's the way you want to win<br>
-            Head down, play nice<br>
-            All the way to paradise
-        </p>
-        <p>
-            Scraping and staggering<br>
-            Until the bitter end<br>
-            Oh friend, I've seen it all before<br>
-            To you I implore
-        </p>
-        <p>
-            But the only way to death<br>
-            Is through the apple tree<br>
-            Life is a lady's breath<br>
-            Life is a mystery
-        </p>
-        <p>
-            Along this sacred way<br>
-            We wander every day<br>
-            Tehran to Tennessee<br>
-            You want a piece of me now?
-        </p>
-        <p>
-            I am the Cider King<br>
-            I am the whiskey whore<br>
-            I am everything<br>
-            Here we go<br>
-            Right along the Cider Road
-        </p>
-        <p>
-            I am the one<br>
-            Walking beneath the sun<br>
-            Condemned and free<br>
-            For all eternity
-        </p>
-        <p>
-            I've watched your cities rise<br>
-            And fall into the dust<br>
-            In hatred, larceny and lust<br>
-            Join it if you must
-        </p>
-        <p>
-            But you must remember me<br>
-            When the moon is in the trees<br>
-            When all your castles turn<br>
-            To penitentiaries
-        </p>
-        <p>
-            Along this sacred way<br>
-            We wander every day<br>
-            Tehran to Tennessee<br>
-            Do you want a piece of me now?
-        </p>
-        <p>
-            I am the Cider King<br>
-            I am the Whiskey Lord<br>
-            I am everything<br>
-            Here we go<br>
-            Right along the Cider<br>
-            Here we go<br>
-            Right along the Cider Road
-        </p>
-        <p>
-            But the only way to death<br>
-            Is through the apple tree<br>
-            Life is a lady's breath<br>
-            Life is a mystery
-        </p>
-        <p>
-            Along this sacred way<br>
-            We wander every day<br>
-            Tehran to Tennessee<br>
-            Do you want a piece of me now?
-        </p>
-        <p>
-            I am the Cider King<br>
-            I am the Whiskey Lord<br>
-            I am everything<br>
-            And here we go<br>
-            Right along the Cider<br>
-            Here we go<br>
-            Right along the Cider<br>
-            Here we go<br>
-            Right along the Cider Road
-        </p>
-    </div>
+    <section class="lyrics">
+        <div class="column">
+            <h1>Cider Road</h1>
+            <h3>by The Dreadnoughts</h3>
+        
+            <p>Let's go</p>
+            <p>
+                Top down, straight in<br>
+                That's the way you want to win<br>
+                Head down, play nice<br>
+                All the way to paradise
+            </p>
+            <p>
+                Scraping and staggering<br>
+                Until the bitter end<br>
+                Oh friend, I've seen it all before<br>
+                To you I implore
+            </p>
+            <p>
+                But the only way to death<br>
+                Is through the apple tree<br>
+                Life is a lady's breath<br>
+                Life is a mystery
+            </p>
+            <p>
+                Along this sacred way<br>
+                We wander every day<br>
+                Tehran to Tennessee<br>
+                You want a piece of me now?
+            </p>
+            <p>
+                I am the Cider King<br>
+                I am the whiskey whore<br>
+                I am everything<br>
+                Here we go<br>
+                Right along the Cider Road
+            </p>
+            <p>
+                I am the one<br>
+                Walking beneath the sun<br>
+                Condemned and free<br>
+                For all eternity
+            </p>
+            <p>
+                I've watched your cities rise<br>
+                And fall into the dust<br>
+                In hatred, larceny and lust<br>
+                Join it if you must
+            </p>
+            <p>
+                But you must remember me<br>
+                When the moon is in the trees<br>
+                When all your castles turn<br>
+                To penitentiaries
+            </p>
+            <p>
+                Along this sacred way<br>
+                We wander every day<br>
+                Tehran to Tennessee<br>
+                Do you want a piece of me now?
+            </p>
+            <p>
+                I am the Cider King<br>
+                I am the Whiskey Lord<br>
+                I am everything<br>
+                Here we go<br>
+                Right along the Cider<br>
+                Here we go<br>
+                Right along the Cider Road
+            </p>
+            <p>
+                But the only way to death<br>
+                Is through the apple tree<br>
+                Life is a lady's breath<br>
+                Life is a mystery
+            </p>
+            <p>
+                Along this sacred way<br>
+                We wander every day<br>
+                Tehran to Tennessee<br>
+                Do you want a piece of me now?
+            </p>
+            <p>
+                I am the Cider King<br>
+                I am the Whiskey Lord<br>
+                I am everything<br>
+                And here we go<br>
+                Right along the Cider<br>
+                Here we go<br>
+                Right along the Cider<br>
+                Here we go<br>
+                Right along the Cider Road
+            </p>
+        </div>
+    </section>
 </body>
 </html>
